# tauri-app

./: .gitignore  AGENTS.md  README.md  TODO.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  constants.ts  db-sqlite.ts  db.ts  main.ts  native.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/assets/: .gitattributes  opencode.jsonc
src-tauri/assets/binaries/: bun-aarch64-unknown-linux-gnu  bun-x86_64-unknown-linux-gnu
src-tauri/binaries/: .gitattributes  bun-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_chart.sql  002_settings.sql  003_journal.sql  004_image.sql  005_research.sql
src-tauri/src/: handlers.rs  lib.rs
src-tauri/src/mcp/: manager.rs  mod.rs  transport.rs  types.rs
src/assets/: markdown.css  milddown.scss  milkdown.scss  style.css
src/components/: AcpDebugMessageModal.vue  AgentChat.vue  AgentConfig.vue  AgentSessionList.vue  ArtifactsPanel.vue  Chat.vue  ChatBox.vue  CommandPalette.vue  DocumentsSlideover.vue  FileImage.vue  Hello.vue  IconEdit.vue  LoadingText.vue  MarkdownText.vue  McpImportModal.vue  McpSelector.vue  McpToolsModal.vue  MessageBubble.vue  MessageEdit.vue  MessageList.vue  MessageSwitcher.vue  MilkdownEditor.vue  ModelSelector.vue  NameEdit.vue  NavigationSlideover.vue  PackageInstallStatus.vue  RichEditor.vue  Scrollbar.vue  Settings.vue  ShinyText.vue  Sidebar.vue  Spinner.vue  (+7 more)
(+146 files in other folders)
