[package]
name = "raven"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
portable-pty = "0.8"
nanoid = "0.4"
notify = "8.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
glob = "0.3"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
chrono = "0.4"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSColor", "NSWindow", "NSView", "NSButton", "NSControl"] }
objc2-foundation = "0.3"
